# CUDA-Programming

./: .gitattributes  README.md  gitattributes.txt
3-计算线程索引/: checkThreadIndex.cu
GPU架构/: readme.md
异构计算的基本概念/: CMakeLists.txt  hello.cu  readme.md
核函数/: readme.md
核函数基本概念/: readme.md  sumArraysOnGPU-timer.cu
相关笔记内容/2-核函数/: CMakeLists.txt  checkDimension.cu
相关笔记内容/3-计算线程索引/: CMakeLists.txt
相关笔记内容/5-CUDA程序流程/: common.cuh  readme.md  test.cu
相关笔记内容/6-线程束/: readme.md
相关笔记内容/7-并行性检测API/: readme.md  sumMatrix.cu
线程索引的计算/: readme.md  sumMatrixOnGPU-2D-grid-2D-block.cu
经典代码示例/仿射变换实例/: CMakeLists.txt  README.md  readme.md  test.cpp
经典代码示例/仿射变换实例/include/: warpaffine.h
经典代码示例/仿射变换实例/src/: warpaffine.cu
